--- a/monadring/monadring.bib
+++ b/monadring/monadring.bib
@@ -20,9 +20,105 @@
   url          = {https://eprint.iacr.org/2012/144}
 }
 @article{grandpa,
-  title={GRANDPA: a Byzantine Finality Gadget},
-  author={Alistair Stewart, Eleftherios Kokoris-Kogia},
-  journal={arXiv:2007.01560},
-  year={2020},
-  url={https://arxiv.org/abs/2007.01560}
+  title   = {GRANDPA: a Byzantine Finality Gadget},
+  author  = {Alistair Stewart, Eleftherios Kokoris-Kogia},
+  journal = {arXiv:2007.01560},
+  year    = {2020},
+  url     = {https://arxiv.org/abs/2007.01560}
+}
+
+@misc{cryptoeprint:2016/889,
+  author       = {Aggelos Kiayias and Alexander Russell and Bernardo David and Roman Oliynykov},
+  title        = {Ouroboros: A Provably Secure Proof-of-Stake Blockchain Protocol},
+  howpublished = {Cryptology ePrint Archive, Paper 2016/889},
+  year         = {2016},
+  note         = {\url{https://eprint.iacr.org/2016/889}},
+  url          = {https://eprint.iacr.org/2016/889}
+}
+
+@article{burdges2020overview,
+  title   = {Overview of polkadot and its design considerations},
+  author  = {Burdges, Jeff and Cevallos, Alfonso and Czaban, Peter and Habermeier, Rob and Hosseini, Syed and Lama, Fabio and Alper, Handan Kilinc and Luo, Ximin and Shirazi, Fatemeh and Stewart, Alistair and others},
+  journal = {arXiv preprint arXiv:2005.13456},
+  year    = {2020}
+}
+@phdthesis{buchman2016tendermint,
+  title  = {Tendermint: Byzantine fault tolerance in the age of blockchains},
+  author = {Buchman, Ethan},
+  year   = {2016},
+  school = {University of Guelph}
+}
+
+@article{acar2018survey,
+  title     = {A survey on homomorphic encryption schemes: Theory and implementation},
+  author    = {Acar, Abbas and Aksu, Hidayet and Uluagac, A Selcuk and Conti, Mauro},
+  journal   = {ACM Computing Surveys (Csur)},
+  volume    = {51},
+  number    = {4},
+  pages     = {1--35},
+  year      = {2018},
+  publisher = {ACM New York, NY, USA}
+}
+
+@article{groth2021non,
+  title   = {Non-interactive distributed key generation and key resharing},
+  author  = {Groth, Jens},
+  journal = {Cryptology ePrint Archive},
+  year    = {2021}
+}
+@article{chillotti2020tfhe,
+  title     = {TFHE: fast fully homomorphic encryption over the torus},
+  author    = {Chillotti, Ilaria and Gama, Nicolas and Georgieva, Mariya and Izabach{\`e}ne, Malika},
+  journal   = {Journal of Cryptology},
+  volume    = {33},
+  number    = {1},
+  pages     = {34--91},
+  year      = {2020},
+  publisher = {Springer}
+}
+
+@article{brakerski2014leveled,
+  title     = {(Leveled) fully homomorphic encryption without bootstrapping},
+  author    = {Brakerski, Zvika and Gentry, Craig and Vaikuntanathan, Vinod},
+  journal   = {ACM Transactions on Computation Theory (TOCT)},
+  volume    = {6},
+  number    = {3},
+  pages     = {1--36},
+  year      = {2014},
+  publisher = {ACM New York, NY, USA}
+}
+
+@article{pang2005new,
+  title     = {A new (t, n) multi-secret sharing scheme based on Shamir’s secret sharing},
+  author    = {Pang, Liao-Jun and Wang, Yu-Min},
+  journal   = {Applied Mathematics and Computation},
+  volume    = {167},
+  number    = {2},
+  pages     = {840--848},
+  year      = {2005},
+  publisher = {Elsevier}
+}
+
+@book{fudenberg1991game,
+  title     = {Game theory},
+  author    = {Fudenberg, Drew and Tirole, Jean},
+  year      = {1991},
+  publisher = {MIT press}
+}
+@article{daskalakis2009complexity,
+  title     = {The complexity of computing a Nash equilibrium},
+  author    = {Daskalakis, Constantinos and Goldberg, Paul W and Papadimitriou, Christos H},
+  journal   = {Communications of the ACM},
+  volume    = {52},
+  number    = {2},
+  pages     = {89--97},
+  year      = {2009},
+  publisher = {ACM New York, NY, USA}
+}
+
+@misc{TFHE-rs,
+  title  = {{TFHE-rs: A Pure Rust Implementation of the TFHE Scheme for Boolean and Integer Arithmetics Over Encrypted Data}},
+  author = {Zama},
+  year   = {2022},
+  note   = {\url{https://github.com/zama-ai/tfhe-rs}}
 }
